Un peu plus de détails dans la description de l'interface graphique

--- a/rapports/diagramme des classes.tex
+++ b/rapports/diagramme des classes.tex
@@ -1,6 +1,6 @@
 
 \begin{tikzpicture}
-\begin{small}
+\begin{footnotesize}
 \begin{class}[text width=7cm]{Card}{0, 0}
 \attribute{name : str}
 \attribute{PRIORITY : dict}
@@ -226,7 +226,7 @@
 
 \draw[dashed,-latex] (DPLL) --node[left, midway]{utilise} (FCN);
 
-\end{small}
+\end{footnotesize}
 
 \end{tikzpicture}
 
