un peu de mise en forme

--- a/rapports/diagramme des classes.tex
+++ b/rapports/diagramme des classes.tex
@@ -205,8 +205,9 @@
 \attribute{coef\_proof\_self : float}
 \attribute{coef\_proof\_other : float}
 \attribute{coef\_ergo : float}
+\attribute{score\_justification : float}
 \operation{sort\_hand()}
-\operation{choice\_fallacy() -> int}
+\operation{choice\_fallacy(num\_other : int) -> int}
 \operation{extend\_coups(lst\_coups : list) -> list}
 \operation{calc\_score() -> float}
 \operation{choix\_coups() -> tuple}
