--- a/rapports/rapport.tex
+++ b/rapports/rapport.tex
@@ -1,39 +1,59 @@
-\documentclass[12pt, algo]{cours}
+\documentclass[12pt, a4paper]{article}
 
-\usepackage{pgf-umlcd}  % pour le diagramme des classes
+
+\usepackage[algo]{raccourcis}
+
+\usepackage[hmargin=2cm, vmargin=1cm, includeheadfoot,headsep=1cm,footskip=1cm]{geometry}
 
 \title{\textbf{\textsc{Ergo -- rapport}}}
-
 \author{Delay Emmanuel-- Desforêts Nicolas}
 \date{\today}
 
-\parindent 0.5cm
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\usepackage{lastpage}
+\lhead{}
+\chead{\thetitle}
+\rhead{}
+\lfoot{}
+\cfoot{\thepage / \pageref*{LastPage}}
+\rfoot{\theauthor}
 
-%\makeatletter
-%\renewcommand{\maketitle}{%
-%  \thispagestyle{plain}
-%  \begin{center}%
-%  \let \footnote \thanks
-%    {\LARGE \@title \par}%
-%    \vskip 1.5em%
-%    {\large \@author}%
-%  \end{center}%
-%  \par
-%  \vskip 1.5em}
-%\makeatother
+
+
+\usepackage{pgf-umlcd}  % pour le diagramme des classes
+
+
+\makeatletter
+\renewcommand{\maketitle}{%
+  \thispagestyle{plain}
+  \begin{center}%
+  \let \footnote \thanks
+    {\LARGE \@title \par}%
+    \vskip 1.5em%
+    {\large \@author}%
+    \vskip 1.5em%
+    {\large \@date}%
+  \end{center}%
+  \par
+  \vskip 1.5em}
+\makeatother
 
 % a3_landascape environment
 \newenvironment{a3_landscape}
     {\clearpage
+    \newgeometry{margin=0.5cm, includeheadfoot}
     \pdfpagewidth=2\pdfpagewidth
     \hsize=2\hsize
     \textwidth=2\textwidth
-    \headwidth=\textwidth}
+    \headwidth=\textwidth
+    }
     {\newpage
     \pdfpagewidth=.5\pdfpagewidth
     \hsize=.5\hsize
     \textwidth=.5\textwidth
-    \headwidth=\textwidth}
+    \headwidth=\textwidth
+    }
 
 
 \begin{document}
@@ -42,7 +62,7 @@
 
 \tableofcontents
 
-\parskip 5pt
+%\parskip 5pt
 
 \pagebreak
 
@@ -135,19 +155,17 @@ L'analyse de la preuve se fait par la classe abstraite \texttt{Demonstration}. C
 
 \subsubsection{Ordi}
 
-Le gestion des coups possibles se fait dans la classe \texttt{Ordi}. Cette classe contient une méthode abstraite \texttt{choix\_coups} en vue de tester différentes idées concernant les deux cartes à jouer.
+Le gestion des coups possibles se fait dans la classe \texttt{Ordi}. Cette classe contient une méthode abstraite \texttt{choix\_coups} en vue de tester différentes idées concernant les deux cartes à jouer. La méthode \texttt{joue} joue effectivement les cartes choisies par \texttt{choix\_coups} dans les prémisses, et elle renvoie un message à afficher concernant ce jeu. La liste des cartes particulières (\texttt{Fallacy}, \texttt{Justification} et \texttt{Ergo}) jouées qui ne concernent pas directement les prémisses est renvoyée afin que la classe \texttt{Main} puisse les gérer.
 
-Une première étape consiste, si on a au moins deux parenthèses en main, à se débrouiller pour en avoir au moins une ouvrante et une fermante. Pour simplifier la gestion des cartes Fallacy et Justification, une deuxième étape consiste à mettre en premier la carte \texttt{Justification} s'il y en a une. Enfin, on travaille avec une copie de la main dans laquelle les joker (\texttt{WildVar} et \texttt{WildOp}) sont remplacés par une lettre et un opérateur (ça ne change rien à la syntaxe). Pour retrouver les cartes qui étaient initialement des jokers, j'ai ajouté un attribut \texttt{wild} à la classe \texttt{Card} qui mémorise l'état initial de la carte.
+À l'initialisation, un appel à \texttt{\_\_parentheses} permet, si la main comporte au moins deux parenthèses, d'en avoir au moins une ouvrante et une fermante. Pour simplifier la gestion des cartes \texttt{Fallacy} et \texttt{Justification}, la méthode \texttt{\_\_justification} met en première position dans la main la carte \texttt{Justification} s'il y en a une, puisque c'est le seul cas où l'ordre est important : il faut d'abord la jouer avant de pouvoir poser une autre carte dans la preuve.
+
+De plus, la méthode \texttt{coups\_possibles} travaille avec une copie de la main dans laquelle les joker (\texttt{WildVar} et \texttt{WildOp}) sont remplacés par une lettre et un opérateur (ça ne change rien à la syntaxe). C'est ce que fait la méthode \texttt{\_\_wild}. Pour retrouver les cartes qui étaient initialement des jokers, j'ai ajouté un attribut \texttt{wild} à la classe \texttt{Card} qui mémorise l'état initial de la carte.
 
 Pour la gestion de la carte \texttt{Revolution} (qui permet d'échanger deux cartes), j'ai mis bout à bout les quatre prémisses pour pouvoir plus facilement les parcourir avec seulement deux boucles imbriquées. Pour retrouver les coordonnées initiales (sous forme d'un numéro de prémisse et d'un index), j'ai fait une petite fonction \texttt{index\_flat2premise\_index}.
 
-Si le joueur est sous le coup d'une falsification, il peut soit commencer par jouer une carte \texttt{Justification}, soit jouer une (ou éventuellement deux) carte(s) \texttt{Fallacy} sur un (deux) joueurs. Cette partie étant assez différente du reste, on la traite dans une boucle séparée.
 
-Enfin, on détermine l'ensemble des coups possibles en essayant de jouer chacune des cartes de la main à l'aide de deux boucles imbriquées. Le gestion des cartes spéciales, en particulier celles qui ne se jouent pas dans les prémisses, nécessite l'utilisation d'une variable booléenne \texttt{special1}.
+Dans la méthode \texttt{coups\_possibles}, on détermine l'ensemble des coups possibles. Si le joueur est sous le coup d'une falsification, il peut soit commencer par jouer une carte \texttt{Justification}, soit jouer une (ou éventuellement deux) carte(s) \texttt{Fallacy} sur un (deux) joueurs. Cette partie étant assez différente du reste, on la traite dans une boucle séparée. Sinon, on essaye de jouer chacune des cartes de la main à l'aide de deux boucles imbriquées. Cette méthode est une horreur du point de vue Deep Nesting\footnote{J'espère que Régis Barbanchon, qui nous a fait le cours de PCOO l'an dernier, ne verra pas ça ;-)}, mais j'ai eu beau tourner le problème de différentes façons, je n'ai pas réussi à faire plus propre.  Le gestion des cartes spéciales, en particulier celles qui ne se jouent pas dans les prémisses, nécessite l'utilisation d'une variable booléenne \texttt{special1}. 
 
-Ces calculs sont réalisés dans la méthode \texttt{coups\_possibles}. Cette méthode est une horreur du point de vue Deep Nesting, mais j'ai eu beau tourner le problème de différentes façons, je n'ai pas réussi à faire plus propre. \footnote{J'espère que Régis Barbanchon, qui nous a fait le cours de PCOO l'an dernier, ne verra pas ça ;-)}
-
-Enfin, la méthode \texttt{joue} joue effectivement les cartes choisies par \texttt{choix\_coups} dans les prémisses, et elle renvoie un message à afficher concernant ce jeu. La liste des cartes particulières (\texttt{Fallacy}, \texttt{Justification} et \texttt{Ergo}) jouées qui ne concernent pas directement les prémisses est renvoyée afin que la classe \texttt{Main} puisse les gérer.
 
 \subsubsection{OrdiRandom}
 
@@ -157,11 +175,11 @@ La classe \texttt{OrdiRandom} concrétise la méthode \texttt{choix\_coups} en s
 
 La classe \texttt{OrdiScore} concrétise elle aussi la méthode \texttt{choix\_coups}, mais en attribuant un score à chaque coup et en choisissant un coup parmi ceux ayant le meilleur score.
 
-Pour cela, je commence par affecter une valeur à chaque carte, puis je trie la main par valeur décroissante. Ainsi, les éventuelles cartes à défausser seront les dernières de la main. Ensuite, la liste des coups possibles est calculée par la méthode \texttt{coups\_possibles}. Mais cette liste doit être complétée en détaillant tous les échanges possibles pour les cartes \texttt{Revolution}, et toutes les possibilités pour les cartes joker. C'est la méthode \texttt{extend\_coups} qui se charge de ce travail. Pour indiquer par quelle carte un joker doit être remplacé, l'index du coup à jouer est transformé en un couple (index, name) où name est le nom à affecter au joker.
+Pour cela, une valeur est affectée à chaque carte, puis la méthode \texttt{sort\_hand} trie la main par valeurs décroissantes. Ainsi, les éventuelles cartes à défausser seront les dernières de la main. Ensuite, la liste des coups possibles est calculée par la méthode \texttt{coups\_possibles}. Mais cette liste doit être complétée en détaillant tous les échanges possibles pour les cartes \texttt{Revolution}, et toutes les possibilités pour les cartes joker. C'est la méthode \texttt{extend\_coups} qui se charge de ce travail. Pour indiquer par quelle carte un joker doit être remplacé, l'index du coup à jouer est transformé en un couple (index, name) où name est le nom à affecter au joker.
 
 Pour le jeu d'une carte \texttt{Fallacy}, la méthode \texttt{choice\_fallacy} se charge de désigner la \og victime \fg. Pour cela, on privilégie les joueurs ayant le plus gros score, et n'étant pas (ou peu) sous le coup d'une falsification.
 
-Ensuite, tous les coups possibles sont joués dans la preuve, avec à chaque fois une évaluation du score obtenu en utilisant un certain nombre de coefficients (pour l'instant choisis au \og doigt mouillé \fg). Le coup est ensuite annulé pour restaurer la preuve dans son état initial. Le coup ayant obtenu le meilleur score est choisi. En cas d'ex \ae quo, un coup au hasard est choisi parmi les meilleurs.
+Ensuite, tous les coups possibles sont joués dans la preuve, avec à chaque fois une évaluation par la méthode \texttt{calc\_score} du score obtenu en utilisant un certain nombre de coefficients (pour l'instant choisis au \og doigt mouillé \fg). Le coup est ensuite annulé pour restaurer la preuve dans son état initial. Le coup ayant obtenu le meilleur score est choisi. En cas d'ex \ae quo, un coup au hasard est choisi parmi les meilleurs.
 
 Avant de renvoyer le coup choisi, les joker éventuellement à jouer sont remplacés dans le main par la valeur choisie.
 
