un peu de nettoyage

--- a/rapports/diagramme des classes.tex
+++ b/rapports/diagramme des classes.tex
@@ -80,7 +80,6 @@
 \operation{rectangle(x : int, y : int)}
 \operation{animate\_letter(nb\_cards : int, l\_way : list)}
 \operation{button\_choice()}
-\operation{choice(nb\_player : int)}
 \operation{destroy(nb\_player=1 : int)}
 \end{class}
 
@@ -136,7 +135,7 @@
 \operation{next\_player()}
 \operation{ordi\_plays()}
 \operation{fin\_manche()}
-\operation{fin\_partie()}
+\operation{fin\_partie(score\_max : int)}
 \operation{version()}
 \operation{rules()}
 \operation{quitter()}
