--- a/rapports/rapport.tex
+++ b/rapports/rapport.tex
@@ -191,7 +191,7 @@ Le bouton droit permet, associé à la méthode \texttt{switch}, si la carte est
 
 De plus, il s'est avéré qu'il fallait autoriser l'annulation d'une carte effacée avec \texttt{Tabula Rasa} sous peine de bloquer le joueur. C'est possible avec la touche ESC.
 
-Il a fallu créer les images des cartes, en choisissant une dimension pratique pour la gestion du placement de cartes. La première dimension était trop importante et ne permettait pas de faire des lignes de preuve suffisamment longues. Les constantes correspondant à la taille des différentes cartes, à l'épaisseur des traits, au nom ou au nombre de chaque cartes ont été 
+Il a fallu créer les images des cartes, en choisissant une dimension pratique pour la gestion du placement de cartes. La première dimension était trop importante et ne permettait pas de faire des lignes de preuve suffisamment longues.
 
 Nous avions initialement choisi de créer nos images au format gif, mais à l'usage le format png s'est révélé plus facile à manipuler. L'image carteBack permet d'afficher les mains des autres joueurs face cachée.
 
@@ -211,7 +211,7 @@ Quatre boutons permettent d'accéder au jeu dans le mode choisi, et une case à 
 
 Le résultat est visible Figure \ref{GI}.
 
-\subsubsection{outils}
+\subsubsection{Outils}
 
 Comme les cartes doivent être placées sur une \og grille \fg{},  deux méthodes \texttt{row\_col2x\_y} et \texttt{x\_y2row\_col} ont été créées pour permettre de passer des coordonnées écran aux coordonnées dans la grille et réciproquement.
 
